.provarCaches/00D410000011HE0EAM/objects/rstk__socontoot__c.object
<CustomObject>
    <description>socontoot__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socontoot_socontract__r.rstk__externalid__c &amp; &apos;-&apos; &amp; rstk__socontoot_soline__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socontoot_socontract__r.Name &amp; &apos;-&apos; &amp; rstk__socontoot_soline__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_poitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item for Purchase - BW</label>
        <referenceTo>rstk__poitem__c</referenceTo>
        <relationshipLabel>Contract Out of Territory Agreements</relationshipLabel>
        <relationshipName>socontoots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_poitemc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item for Purchase Order - Color</label>
        <referenceTo>rstk__poitem__c</referenceTo>
        <relationshipLabel>Contract Out of Territory Agreements (Item for Purchase Order - Color)</relationshipLabel>
        <relationshipName>socontootsc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_poitems__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item for Purchase Order - Scan</label>
        <referenceTo>rstk__poitem__c</referenceTo>
        <relationshipLabel>Contract Out of Territory Agreements (Item for Purchase Order - Scan)</relationshipLabel>
        <relationshipName>socontootss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Contract Out of Territory Agreements</relationshipLabel>
        <relationshipName>socontoots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_price__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price - BW</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_pricec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price - Color</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_prices__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price - Scan</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_socontract__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract ID</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Contract Out of Territory Agreements</relationshipLabel>
        <relationshipName>socontoots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Covered SO Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Contract Out of Territory Agreements</relationshipLabel>
        <relationshipName>socontoots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Covered Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Contract Out of Territory Agreements</relationshipLabel>
        <relationshipName>socontoots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_totunitsbillc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Copies Billed - Color</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_totunitsbilled__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Copies Billed - BW</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontoot_totunitsbills__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Copies Billed - Scan</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Out of Territory Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>